@@ -11,8 +11,6 @@ package belldandy;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.time.Duration;
-import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -20,7 +18,6 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.CancellationException;
 import java.util.concurrent.Future;
 import java.util.concurrent.Future.State;
-import java.util.concurrent.TimeUnit;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -28,6 +25,8 @@ import org.junit.jupiter.api.BeforeEach;
 import kiss.I;
 
 public class SchedulerTestSupport {
+
+    private static final long tolerance = 10;
 
     protected TestableScheduler scheduler;
 
@@ -140,7 +139,7 @@ public class SchedulerTestSupport {
      */
     protected boolean verifyStartExecutionOrder(Verifier<?>... verifiers) {
         for (int i = 1; i < verifiers.length; i++) {
-            assert verifiers[i - 1].startTime.getFirst().isBefore(verifiers[i].startTime.getFirst());
+            assert verifiers[i - 1].startTime.getFirst() <= verifiers[i].startTime.getFirst();
         }
         return true;
     }
@@ -152,7 +151,7 @@ public class SchedulerTestSupport {
      */
     protected boolean verifyEndExecutionOrder(Verifier<?>... verifiers) {
         for (int i = 1; i < verifiers.length; i++) {
-            assert verifiers[i - 1].endTime.getFirst().isBefore(verifiers[i].endTime.getFirst());
+            assert verifiers[i - 1].endTime.getFirst() <= verifiers[i].endTime.getFirst();
         }
         return true;
     }
@@ -162,11 +161,11 @@ public class SchedulerTestSupport {
      */
     protected class Verifier<T> implements Callable<T>, Runnable {
 
-        private final Instant created = Instant.now();
+        private final long created = System.currentTimeMillis();
 
-        private final List<Instant> startTime = new ArrayList();
+        private final List<Long> startTime = new ArrayList();
 
-        private final List<Instant> endTime = new ArrayList();
+        private final List<Long> endTime = new ArrayList();
 
         private final T expectedResult;
 
@@ -193,7 +192,7 @@ public class SchedulerTestSupport {
          */
         @Override
         public T call() throws Exception {
-            startTime.add(Instant.now());
+            startTime.add(System.currentTimeMillis());
             try {
                 if (expectedError != null) {
                     throw I.quiet(expectedError);
@@ -201,7 +200,7 @@ public class SchedulerTestSupport {
                     return expectedResult;
                 }
             } finally {
-                endTime.add(Instant.now());
+                endTime.add(System.currentTimeMillis());
 
                 if (endTime.size() == max) {
                     scheduler.cancel(this);
@@ -224,9 +223,9 @@ public class SchedulerTestSupport {
         /**
          * Verify the initial delay.
          */
-        protected boolean verifyInitialDelay(long time, TimeUnit unit) {
+        protected boolean verifyInitialDelay(long millis) {
             assert !startTime.isEmpty();
-            assert Duration.between(created, startTime.getFirst()).minus(time, unit.toChronoUnit()).isPositive();
+            assert millis - tolerance <= startTime.get(0) - created;
 
             return true;
         }
@@ -234,11 +233,11 @@ public class SchedulerTestSupport {
         /**
          * Verify rate.
          */
-        protected boolean verifyRate(TimeUnit unit, long... rates) {
-            assert startTime.size() == rates.length;
-            for (int i = 0; i < rates.length; i++) {
-                Duration diff = Duration.between(i == 0 ? created : startTime.get(i - 1), startTime.get(i));
-                assert diff.minus(rates[i], unit.toChronoUnit()).isPositive();
+        protected boolean verifyRate(long... millis) {
+            assert startTime.size() == millis.length;
+            for (int i = 0; i < millis.length; i++) {
+                long diff = startTime.get(i) - (i == 0 ? created : startTime.get(i - 1));
+                assert millis[i] - tolerance <= diff : diff;
             }
             return true;
         }
@@ -246,11 +245,11 @@ public class SchedulerTestSupport {
         /**
          * Verify interval.
          */
-        protected boolean verifyInterval(TimeUnit unit, long... delays) {
-            assert startTime.size() == delays.length;
-            for (int i = 0; i < delays.length; i++) {
-                Duration diff = Duration.between(i == 0 ? created : endTime.get(i - 1), startTime.get(i));
-                assert diff.minus(delays[i], unit.toChronoUnit()).isPositive();
+        protected boolean verifyInterval(long... millis) {
+            assert startTime.size() == millis.length;
+            for (int i = 0; i < millis.length; i++) {
+                long diff = startTime.get(i) - (i == 0 ? created : endTime.get(i - 1));
+                assert millis[i] - tolerance <= diff : diff;
             }
             return true;
         }
